[package]
name = "repo-db-generator"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.26.3"
toml = "0.5.8"
serde = "1.0.131"
serde_derive = "1.0.131"
serde_json = "1.0.72"
walkdir = "2.3.2"
ring = "0.17.0-alpha.10"
data-encoding = "2.3.2"